--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    />
+      />
   </head>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <body>
     <div id="app">
       <div id="map" style="width:100%; height:100vh;"></div>
