--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div id="app">
       <div id="map" style="width:100%; height:100vh;"></div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
