--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       />
   </head>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="/src/map.js"></script>
+  <script src="/src/main.js"></script>
+  
   <body>
     <div id="app">
       <div id="map" style="width:100%; height:100vh;"></div>
