--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="/src/map.js"></script>
-  <script src="/src/main.js"></script>
+  <!-- <script src="/src/main.js"></script> -->
   
   <body>
     <div id="app">
