--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
     <div id="app">
-      <div id="map" style="width:100%; height:200px;"></div>
+      <div id="map" style="width:400px; height:400px;"></div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
