--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="/src/map.js"></script>
-  <!-- <script src="/src/main.js"></script> -->
+  <script src="/src/main.js"></script>
   
   <body>
     <div id="app">
       <div id="map" style="width:400px; height:400px;"></div>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- <script type="module" src="/src/main.js"></script> -->
   </body>
 </html>
