--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
       <div id="map" style="width:400px; height:400px;"></div>
     </div>
     <!-- <script type="module" src="/src/main.js"></script> -->
+    <div id="div">
+    </div>
+    <script>
+      document.querySelector('#div').textContent = 'xxx';
+    </script>
   </body>
 </html>
