--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="/src/map.js"></script>
+  <script src="/src/main.js"></script>
   
   <body>
     <div id="app">
@@ -19,8 +20,9 @@
     <!-- <script type="module" src="/src/main.js"></script> -->
     <div id="div">
     </div>
-    <script src="/src/main.js"></script>
+    <!-- <script src="/src/main.js"></script> -->
     <script>
+      main();
       document.querySelector('#div').textContent = 'xxx';
     </script>
   </body>
