--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- <script src="/src/main.js"></script> -->
     <script>
       var data = main();
+      console.log(data);
       document.querySelector('#div').textContent = data.pages[0].title;
     </script>
   </body>
