--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script>
       var data = main();
       console.log(data);
+      console.log('data...')
       //document.querySelector('#div').textContent = data.pages[0].title;
       document.querySelector('#div').textContent = 'xxxxx';
     </script>
