--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       var data = main();
       console.log(data);
       console.log('data...')
+      console.log(data.pages)
       //document.querySelector('#div').textContent = data.pages[0].title;
       document.querySelector('#div').textContent = 'xxxxx';
     </script>
