--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- <script src="/src/main.js"></script> -->
     <script>
       var data = main();
+      console.log('main()')
       console.log(data);
       console.log('data...')
       console.log(data.pages)
