--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script>
-      var data = main();
+      var data = await main();
       console.log('main()')
       console.log(data);
       console.log('data...')
