--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script>
-      var data = await main();
+      async function xxx(){
+          var data = await main();
+      }
+      xxx();
       console.log('main()')
       console.log(data);
       console.log('data...')
