--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script>
+      var data;
       async function xxx(){
-          var data = await main();
+          data = await main();
       }
       xxx();
       console.log('main()')
