--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script>
+      main();
       $('#div').text('aaa')
     </script>
   </body>
