--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- <script src="/src/main.js"></script> -->
     <script>
       main();
-      $('#div').text('aaa')
+      $('#div').text('Do the main thing.')
     </script>
   </body>
 </html>
