--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="/src/map.js"></script>
-  <script src="/src/main.js"></script>
+  <!-- <script src="/src/main.js"></script> -->
   
   <body>
     <div id="app">
@@ -20,6 +20,8 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script>
+      import { main } from "/src/main.js"
+      
       main();
       $('#div').text('Do the main thing.')
     </script>
