--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="app">
       <div id="map" style="width:400px; height:400px;"></div>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- <script type="module" src="/src/main.js"></script> -->
     <div id="div">
     </div>
     <!-- <script src="/src/main.js"></script> -->
