--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="div">
     </div>
     <!-- <script src="/src/main.js"></script> -->
-    <script type="module">>
+    <script type="module">
       import { main } from "/src/main.js"
       
       main();
