--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="/src/map.js"></script>
+  <!-- <script src="/src/map.js"></script> -->
   <!-- <script src="/src/main.js"></script> -->
   
   <body>
@@ -20,6 +20,7 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script type="module">
+      import { initMap } from "/src/map.js"
       import { main } from "/src/main.js"
       
       main();
