--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script type="module">
-      import { initMap } from "/src/map.js"
+      // import { initMap } from "/src/map.js"
       import { main } from "/src/main.js"
       
       main();
