--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
     <!-- <script type="module" src="/src/main.js"></script> -->
     <div id="div">
+      <ul>
+	<li id="li"></li>
+      </ul>
     </div>
     <!-- <script src="/src/main.js"></script> -->
     <script type="module">
@@ -24,7 +27,7 @@
       import { main } from "/src/main.js"
       
       main();
-      $('#div').text('Do the main thing.')
+      $('#li').text('Do the main thing.')
     </script>
   </body>
 </html>
