--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       var project = location.pathname.replace(/^\//, "");
       if (!project) {
 	  alert("URLにプロジェクト名を指定してください");
-	  return;
+	  // return;
       }
       
       var data = main(project);
