--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       }
       
       var data = main(project);
+
+      console.log(data);
       
       $('#li').text(data[0].title)
     </script>
