--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
       var data = main(project);
 
-      console.log(data);
+      console.log(data[0]);
       
       $('#li').text(data[0].title)
     </script>
