--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	  // return;
       }
       
-      var data = main(project);
+      var data = await main(project);
 
       console.log(data[0]);
       
