--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       console.log(data[0]);
 
       var li = $('li')
+      alert(li)
       li.text(data[1].title)
       $('#poilist').append(li)
 
