--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
       console.log(data[0]);
 
-      var li = $('li')
-      alert(li)
+      var li = $('<li>')
       li.text(data[1].title)
       $('#poilist').append(li)
 
