--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- <script src="/src/main.js"></script> -->
     <script type="module">
       import { initMap } from "/src/map.js"
-      import { main } from "/src/main.js"
+      // import { main } from "/src/main.js"
 
       console.log('地図表示')
       initMap();
@@ -36,7 +36,8 @@
       }
 
       console.log('データ取得')
-      var data = await main(project);
+      //var data = await main(project);
+      var data = await getData(project);
 
       // console.log(data[0]);
 
