--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="module">
       import { initMap } from "/src/map.js"
       // import { main } from "/src/main.js"
+      import { getData } from "/src/data.js";
 
       console.log('地図表示')
       initMap();
