--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
     <div id="app">
       <div id="map" style="width:400px; height:400px;"></div>
     </div>
-    <!-- <script type="module" src="/src/main.js"></script> -->
     <div id="div">
       <ul id="poilist">
       </ul>
     </div>
-    <!-- <script src="/src/main.js"></script> -->
+
+    <!-- <script type="module" src="/src/main.js"></script> -->
+    
     <script type="module">
-      import { initMap } from "/src/map.js"
+      import { initMap, getCenter } from "/src/map.js"
       // import { main } from "/src/main.js"
       import { getData } from "/src/data.js";
 
       console.log('地図表示')
-      initMap();
+      const map = initMap();
+
+      map.on('moveend', function () {
+	  console.log("地図が動き終わった");
+      });
 
       console.log('プロジェクト名取得')
       var project = location.pathname.replace(/^\//, "");
@@ -40,8 +45,6 @@
       //var data = await main(project);
       var data = await getData(project);
 
-      // console.log(data[0]);
-
       for(var i=0;i<data.length;i++){
 	  var li = $('<li>')
 	  li.text(data[i].title)
@@ -51,3 +54,4 @@
     </script>
   </body>
 </html>
+
