--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 	  console.log("地図が動き終わった");
 	  curpos = map.getCenter();
 	  console.log(curpos);
+
+	  $('#poilist').empty();
       });
 
     </script>
