--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	  // dataをソート
 	  for (var i = 0; i < data.length; i++) {
               var entry = data[i]
-              entry.distance = distance(entry.lat, entry.lng, curpos.lat, curpos.lng)
+              entry.distance = distance(entry.pos.lat, entry.pos.lng, curpos.lat, curpos.lng)
 	  }
 	  data = data.sort((a, b) => { // 近い順にソート
               return a.distance > b.distance ? 1 : -1;
