--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  li.text(data[i].title)
 		     $('#poilist').append(li)
 		     */
-          var e = ${'<div>');
+          var e = $('<div>');
           e.text(data[i].title);		     
 	  ${'#poilist').append(e);
       }
