--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		     */
           var e = $('<div>');
           e.text(data[i].title);		     
-	  ${'#poilist').append(e);
+	  $('#poilist').append(e);
       }
       
       map.on('moveend', function () {
