--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div id="poilist">
     </div>
 
-    <!-- <script type="module" src="/src/main.js"></script> -->
-    
+    <script type="module" src="/src/main.js"></script>
+
+    <!--
     <script type="module">
       import { initMap, distance, getCenter } from "/src/map.js"
       // import { main } from "/src/main.js"
@@ -76,7 +77,8 @@
 	  }
       });
 
-    </script>
+			 </script>
+    -->
   </body>
 </html>
 
