--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
   <!-- <script src="/src/main.js"></script> -->
   
   <body>
-    <div id="app">
-      <div id="map" style="width:400px; height:400px;"></div>
+    <div style="display: flex; margin: 20px;">
+      <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
+      </div>
+      <div style="flex-grow: 0;">
+	<div>
+	  <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	</div>
+      </div>
     </div>
+    
     <div id="poilist">
     </div>
 
