--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
       <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
       </div>
       <div style="flex-grow: 0;">
-	<div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	  <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px; object-fit: cover;">
-	</div>
-	<div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	  <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	<div style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
 	</div>
       </div>
     </div>
