--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
 	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
 	</div>
       </div>
     </div>
