--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div style="flex-grow: 0;">
 	<div style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
-	  <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px; object-fit: cover;" />
+	  <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
 	  <!--
 	  <div style="margin: 0px 5px 5px;">
 	    <img src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px; object-fit: cover;">
