--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       </div>
       <div style="flex-grow: 0;">
 	<div style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
+	  <img id="img0" src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
+	  <img src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
+	  <!--
 	  <div style="margin: 0px 5px 5px;">
 	    <img id="img0" src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
 	  </div>
@@ -24,7 +27,6 @@
 	  <div style="margin: 0px 5px 5px;">
 	    <img src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
-	  <!--
 	  <div style="margin: 0px 5px 5px;">
 	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
