--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       </div>
       <div style="flex-grow: 0;">
 	<div style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
+	  <!--
 	  <img id="img0" src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
 	  <img id="img1" src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
-	  <!--
+	  -->
 	  <div style="margin: 0px 5px 5px;">
 	    <img id="img0" src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
 	  </div>
@@ -28,30 +29,29 @@
 	    <img src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img0" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	  </div>
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
+	    <img id="img1" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
 	    <img id="img2" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img3" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img4" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img5" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img6" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
+	    <img id="img7" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
-	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
-	    <img src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
-	  </div>
-	  -->
 	</div>
       </div>
     </div>
