--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <div style="margin: 0px 5px 5px;">
 	    <img src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
-	  <div style="margin: 0px 5px 5px;">
+	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
 	    <img id="img0" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
