--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
       </div>
       <div style="flex-grow: 0;">
-	<div style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
-	  <!--
-	  <img id="img0" src="https://gyazo.com/2c54278cb38e8e99c76e6193c7b429e3/raw" style="height: 195px; width: 195px;">
-	  <img id="img1" src="https://i.gyazo.com/2164f6e3a067ae1ea6c7649cbc6a23b9.png" style="height: 195px; width: 195px; object-fit: cover;">
-	  -->
+	<div id="images" style="display: flex; flex-wrap: wrap; margin-left: 5px; max-height: 400px; overflow-y: hidden;">
 	  <div style="margin: 0px 5px 5px; cursor: zoom-in;">
 	    <img id="img0" src="https://gyazo.com/82838032bcba804bd20e84911ef13df4/raw" style="height: 195px; width: 195px; object-fit: cover;">
 	  </div>
