--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     
-    <div id="poilist" style="margin: 0px 5px 5px;>
+    <div id="poilist" style="margin: 0px 5px 5px;">
     </div>
 
     <script type="module" src="/src/main.js"></script>
