--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   
   <body>
+    <div style="font-size: 18px; font-weight: bold;">
+      <a href="https://scrapbox.io/Mapfeel/">Mapfeel</a>
+    </div>
     <div style="display: flex; margin: 5px;">
       <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
       </div>
