--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <body>
     <div style="font-size: 18px; font-weight: bold;">
-      <a href="https://scrapbox.io/Mapfeel/">Mapfeel</a>
+      <a href="https://scrapbox.io/Mapfeel/">Mapfeel解説</a>
     </div>
     <div style="display: flex; margin: 5px;">
       <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
