--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div style="font-size: 18px; font-weight: bold;">
       <a href="https://scrapbox.io/Mapfeel/"><img src="https://s3-ap-northeast-1.amazonaws.com/masui.org/0/e/0ef7c5784af3176410e2e9f06fd53241.png" height=30px></a>
-      写真と位置情報を活用する
+      写真と地図を楽しむ
     </div>
     <div style="display: flex; margin: 5px;">
       <div id="map" style="position: relative; width: 400px; height: 400px; display: block; flex-grow: 1; min-width: 400px; max-width: 400px;">
