--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   
   <body>
     <div style="font-size: 18px; font-weight: bold;">
-      <a href="https://scrapbox.io/Mapfeel/"><img src="https://s3-ap-northeast-1.amazonaws.com/masui.org/0/e/0ef7c5784af3176410e2e9f06fd53241.png" height=30px vertical-align: baseline;></a>
+      <a href="https://scrapbox.io/Mapfeel/">
+	<img src="https://s3-ap-northeast-1.amazonaws.com/masui.org/0/e/0ef7c5784af3176410e2e9f06fd53241.png" height=30px" style="vertical-align:baseline;>
+      </a>
       写真と地図を楽しむ
     </div>
     <div style="display: flex; margin: 5px;">
