--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <title>Mapfeel</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <style type="text/css">
+      body {
+	  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      a:link { color: #0000f0 ; }
+      a:visited { color: #0000f0 ; }
+      a {
+	  text-decoration: none;
+      }
+    </style>
   </head>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
