--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       a {
 	  text-decoration: none;
       }
+
+      .clickable {
+	  cursor: pointer;
+	  transition: background-color 0.2s, transform 0.15s;
+      }
+      .clickable:hover {
+	  background-color: #f3f6ff;
+	  transform: translateY(-1px);
+      }
     </style>
   </head>
   
