--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Mapfeel</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <link rel="stylesheet" href="mapfeel.css"/>
+    <!--
     <style type="text/css">
       body {
 	  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -23,6 +25,7 @@
 	  transform: translateY(-1px);
       }
     </style>
+    -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   
@@ -31,7 +34,7 @@
   <body>
     <div style="font-size: 18px; font-weight: bold;">
       <a href="https://scrapbox.io/Mapfeel/">
-	Mapfeel: 写真と地図を楽しむ
+	Mapfeel: 画像と地図を楽しむ
       </a>
     </div>
     <div style="display: flex; margin: 5px;">
