--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div style="font-size: 18px; font-weight: bold;">
       <a href="https://scrapbox.io/Mapfeel/">
-	Mapfeel: 画像と地図で情報整理
+	Mapfeel: 地図と画像で情報整理
       </a>
     </div>
     <div style="display: flex; margin: 5px;">
